# django-modern-admin-dashboard

./: .gitignore  ADMIN_REPLACEMENT_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_FIX.md  DJANGO_SETUP_GUIDE.md  INSTALLATION_INSTRUCTIONS.md  INTEGRATION_GUIDE.md  MANIFEST.in  PUBLISH.md  PUBLISH_INSTRUCTIONS.md  QUICK_TEST_GUIDE.md  README.md  SECURITY.md  SETUP_GUIDE.md  TEST_FIX.md  URLS_SETUP_GUIDE.md  health_check.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  widget_request.md
.github/workflows/: ci.yml  publish.yml
dashboard/: __init__.py  _version.py  admin.py  apps.py  urls.py  views.py  widgets.py
dashboard/api/: urls.py  views.py
dashboard/management/commands/: create_dashboard_widget.py  dashboard_init.py
dashboard/static/dashboard/css/: style.css
dashboard/templates/admin/: base.html  base_site.html  change_form.html  change_list.html  index.html
dashboard/templates/admin/includes/: fieldset.html
dashboard/templates/dashboard/: base.html  dashboard.html
dashboard/templates/dashboard/components/: loading_skeleton.html
dashboard/templates/dashboard/widgets/: base.html  chart.html  metric.html  table.html  widget_icon.html
dashboard/templatetags/: dashboard_tags.py
dashboard_config/: settings.py
docs/: api.md  ci-troubleshooting.md  configuration.md  installation.md  theming.md  widgets.md
test_project/: manage.py
test_project/test_app/: admin.py  apps.py  models.py  urls.py  views.py  widgets.py
test_project/test_project/: settings.py  urls.py  wsgi.py
tests/: __init__.py  conftest.py  test_api.py  test_views.py  test_widgets.py  urls.py
