[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-modern-admin-dashboard"
version = "0.1.0"
description = "A modern, responsive Django admin dashboard with TailwindCSS, Chart.js, and widget system"
readme = "README.md"
license = "MIT"
keywords = ["django", "admin", "dashboard", "widgets", "charts", "responsive"]
authors = [
    {name = "SajidKalam-byte", email = "sajidkalam.byte@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "Django>=3.2",
    "djangorestframework>=3.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest-django>=4.5.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=6.0.0",
    "isort>=5.10.0",
]

[project.urls]
Homepage = "https://github.com/SajidKalam-byte/django-modern-admin-dashboard"
Documentation = "https://github.com/SajidKalam-byte/django-modern-admin-dashboard#readme"
Repository = "https://github.com/SajidKalam-byte/django-modern-admin-dashboard"
Issues = "https://github.com/SajidKalam-byte/django-modern-admin-dashboard/issues"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.conftest"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  migrations
  | venv
  | .venv
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_django = "django"
known_first_party = "dashboard,dashboard_config"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.flake8]
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    ".venv",
    "venv",
]
ignore = [
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
]
